:art: 优化 auth